force-app/main/default/objects/ESS_FixAndGeneral__c.object
<CustomObject>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Areas__c</fullName>
        <label>Areas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TSR</fullName>
                </value>
                <value>
                    <fullName>TBK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Files__c</fullName>
        <label>Attachment Files</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attentiveness_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attentiveness Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buildings__c</fullName>
        <label>Buildings</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Areas__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Area-A</fullName>
                </value>
                <value>
                    <fullName>Area-B</fullName>
                </value>
                <value>
                    <fullName>Area-C</fullName>
                </value>
                <value>
                    <fullName>Area-D</fullName>
                </value>
                <value>
                    <fullName>Area-E (TLB)</fullName>
                </value>
                <value>
                    <fullName>Area-F (TPX)</fullName>
                </value>
                <value>
                    <fullName>Jetty</fullName>
                </value>
                <value>
                    <fullName>Lorry Loading</fullName>
                </value>
                <value>
                    <fullName>Marine Office</fullName>
                </value>
                <value>
                    <fullName>Mech W/S EBC</fullName>
                </value>
                <value>
                    <fullName>Elec W/S EBC</fullName>
                </value>
                <value>
                    <fullName>Instr W/S EBC</fullName>
                </value>
                <value>
                    <fullName>Fabrication W/S EBC</fullName>
                </value>
                <value>
                    <fullName>Civil W/S EBC</fullName>
                </value>
                <value>
                    <fullName>Utility Building / Test Building</fullName>
                </value>
                <value>
                    <fullName>Warehouse EBC</fullName>
                </value>
                <value>
                    <fullName>Fire Station</fullName>
                </value>
                <value>
                    <fullName>Phubai Office</fullName>
                </value>
                <value>
                    <fullName>Training Center</fullName>
                </value>
                <value>
                    <fullName>Function Center</fullName>
                </value>
                <value>
                    <fullName>Medical Center</fullName>
                </value>
                <value>
                    <fullName>Excise Office</fullName>
                </value>
                <value>
                    <fullName>LLK Terminal</fullName>
                </value>
                <value>
                    <fullName>SRB Terminal</fullName>
                </value>
                <value>
                    <fullName>TSB Building</fullName>
                </value>
                <value>
                    <fullName>TBK Office</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Comment__c</fullName>
        <label>Cancel Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Attachment_Files__c</fullName>
        <label>Completed Attachment Files</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By_Email__c</fullName>
        <label>Completed By Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Due_Date__c</fullName>
        <label>Expected Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expertise Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fast_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Buildings__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Floor 1: Lobby&amp;Eatery</fullName>
                </value>
                <value>
                    <fullName>Floor 2: Service&amp;Common Space</fullName>
                </value>
                <value>
                    <fullName>Floor 3: Business Center</fullName>
                </value>
                <value>
                    <fullName>Floor 4: Area Production Unit</fullName>
                </value>
                <value>
                    <fullName>Floor 5: Project&amp;Refinery Support</fullName>
                </value>
                <value>
                    <fullName>Floor 6: Organization Effectiveness</fullName>
                </value>
                <value>
                    <fullName>Floor 7: Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Cost__c</fullName>
        <label>General Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Detail__c</fullName>
        <label>General Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Internal_Detail__c</fullName>
        <label>General Internal Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Type_Of_Service_Other__c</fullName>
        <label>General Type Of Service Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Type_Of_Service__c</fullName>
        <label>General Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MovingService</fullName>
                    <label>งานขนย้าย</label>
                </value>
                <value>
                    <fullName>EventAndConferencePlanning</fullName>
                    <label>งานจัดสถานที่/ห้องประชุม</label>
                </value>
                <value>
                    <fullName>FurnitureAndOfficeEquipmentArrangement</fullName>
                    <label>งานจัดเฟอร์นิเจอร์และอุปกรณ์สำนักงาน</label>
                </value>
                <value>
                    <fullName>ElectricalAppliancesArrangement</fullName>
                    <label>งานจัดเครื่องใช้ไฟฟ้า</label>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                    <label>งานภูมิทัศน์</label>
                </value>
                <value>
                    <fullName>CleaningService</fullName>
                    <label>งานทำความสะอาด</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>อื่นๆ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_No__c</fullName>
        <label>House No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Type__c</fullName>
        <label>House Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SiteHouse</fullName>
                </value>
                <value>
                    <fullName>AHouse</fullName>
                </value>
                <value>
                    <fullName>BUpgrade</fullName>
                </value>
                <value>
                    <fullName>BHouse</fullName>
                </value>
                <value>
                    <fullName>CUpgrade</fullName>
                </value>
                <value>
                    <fullName>CHouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Housing_Cost__c</fullName>
        <label>Housing Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Housing_Detail__c</fullName>
        <label>Housing Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Housing_Internal_Detail__c</fullName>
        <label>Housing Internal Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Housing_Type_Of_Service_Other__c</fullName>
        <label>Housing Type Of Service Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Housing_Type_of_Service__c</fullName>
        <label>Housing Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ElectricalAndLightingSystem</fullName>
                    <label>ระบบไฟฟ้าและแสงสว่าง</label>
                </value>
                <value>
                    <fullName>PlumbingSystem</fullName>
                    <label>ระบบน้ำประปา</label>
                </value>
                <value>
                    <fullName>SewageSystem</fullName>
                    <label>ระบบน้ำทิ้ง</label>
                </value>
                <value>
                    <fullName>HvacSystem</fullName>
                    <label>ระบบเครื่องปรับอากาศ</label>
                </value>
                <value>
                    <fullName>GasSystem</fullName>
                    <label>ระบบแก๊ส</label>
                </value>
                <value>
                    <fullName>CctvSystem</fullName>
                    <label>ระบบ CCTV</label>
                </value>
                <value>
                    <fullName>ElectricalAppliances</fullName>
                    <label>เครื่องใช้ไฟฟ้า</label>
                </value>
                <value>
                    <fullName>BathroomFixturesAndEquipment</fullName>
                    <label>อุปกรณ์สุขภัณฑ์</label>
                </value>
                <value>
                    <fullName>FurnitureAndOfficeEquipment</fullName>
                    <label>เฟอร์นิเจอร์และอุปกรณ์สำนักงาน</label>
                </value>
                <value>
                    <fullName>BuildingStructure</fullName>
                    <label>โครงสร้างอาคาร</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>อื่นๆ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_On_Behalf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is On Behalf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PRTR_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PRTR Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PRTR_Requester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PRTR Requester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Name__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(CreatedDate)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <label>Month Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Cost__c</fullName>
        <label>Office Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Detail__c</fullName>
        <label>Office Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Internal_Detail__c</fullName>
        <label>Office Internal Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Type_Of_Service_Other__c</fullName>
        <label>Office Type Of Service Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Type_Of_Service__c</fullName>
        <label>Office Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ElectricalAndLightingSystem</fullName>
                </value>
                <value>
                    <fullName>PlumbingSystem</fullName>
                </value>
                <value>
                    <fullName>SewageSystem</fullName>
                </value>
                <value>
                    <fullName>HvacSystem</fullName>
                </value>
                <value>
                    <fullName>LiftSystem</fullName>
                </value>
                <value>
                    <fullName>GasSystem</fullName>
                </value>
                <value>
                    <fullName>FireAlarmSystem</fullName>
                </value>
                <value>
                    <fullName>CctvSystem</fullName>
                </value>
                <value>
                    <fullName>ElectricalAppliances</fullName>
                </value>
                <value>
                    <fullName>BathroomFixturesAndEquipment</fullName>
                </value>
                <value>
                    <fullName>FurnitureAndOfficeEquipment</fullName>
                </value>
                <value>
                    <fullName>BuildingStructure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Behalf_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Behalf Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Department__c</fullName>
        <label>On Behalf Of Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_EN__c</fullName>
        <label>On Behalf Of EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Email__c</fullName>
        <label>On Behalf Of Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Employee_Id__c</fullName>
        <label>On Behalf Of Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Function__c</fullName>
        <label>On Behalf Of Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Id__c</fullName>
        <label>On Behalf Of Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Position__c</fullName>
        <label>On Behalf Of Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Section__c</fullName>
        <label>On Behalf Of Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of_Unit__c</fullName>
        <label>On Behalf Of Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <label>On Behalf Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Department__c</fullName>
        <label>PMSV Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Email__c</fullName>
        <label>PMSV Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Employee_Id__c</fullName>
        <label>PMSV Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Function__c</fullName>
        <label>PMSV Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Id__c</fullName>
        <label>PMSV Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Position__c</fullName>
        <label>PMSV Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Section__c</fullName>
        <label>PMSV Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV_Unit__c</fullName>
        <label>PMSV Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMSV__c</fullName>
        <label>PMSV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>Daywork</fullName>
                    <label>Day Work</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Punctuality_Rating_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Punctuality_Rating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Punctuality Rating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rating_Date_2__c</fullName>
        <label>Rating Date 2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Date__c</fullName>
        <label>Rating Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rating_Score_2__c</fullName>
        <label>Rating Score 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Score__c</fullName>
        <label>Rating Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject_Comment__c</fullName>
        <label>Reject Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Repair_Date__c</fullName>
        <label>Repair Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Email__c</fullName>
        <label>Requester Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Employee_Id__c</fullName>
        <label>Requester Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Function__c</fullName>
        <label>Requester Function</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Id__c</fullName>
        <label>Requester Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name_EN__c</fullName>
        <label>Requester Name EN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Position__c</fullName>
        <label>Requester Position</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Section__c</fullName>
        <label>Requester Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Mobile__c</fullName>
        <label>Requester Tel Mobile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Tel_Office__c</fullName>
        <label>Requester Tel Office</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Unit__c</fullName>
        <label>Requester Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Verifying</fullName>
                </value>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>OnProcess</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tel_No__c</fullName>
        <label>Tel No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Cost__c</fullName>
        <label>Transportation Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_Detail__c</fullName>
        <label>Transportation Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation_Internal_Detail__c</fullName>
        <label>Transportation Internal Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation_Items__c</fullName>
        <label>Transportation Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transportation_Type_Of_Service_Other__c</fullName>
        <label>Transportation Type Of Service Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Type_Of_Service__c</fullName>
        <label>Transportation Type Of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ChangeTire</fullName>
                    <label>เปลี่ยนยาง</label>
                </value>
                <value>
                    <fullName>ChangeChain</fullName>
                    <label>เปลี่ยนโซ่</label>
                </value>
                <value>
                    <fullName>ChangeSeat</fullName>
                    <label>เปลี่ยนเบาะ</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>อื่นๆ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OfficeEquipment</fullName>
                    <label>งานซ่อมอุปกรณ์สำนักงาน/ส่วนอาคาร</label>
                </value>
                <value>
                    <fullName>Housing</fullName>
                    <label>งานแจ้งซ่อมบ้านพัก</label>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                    <label>งานซ่อมยานพาหนะ</label>
                </value>
                <value>
                    <fullName>GeneralService</fullName>
                    <label>อื่นๆ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <label>ESS FixAndGeneral</label>
    <nameField>
        <displayFormat>FAG-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>